--- a/src/sass/page/_c_back_info.scss
+++ b/src/sass/page/_c_back_info.scss
@@ -44,6 +44,10 @@
         display: flex;
         align-items: center;
 
+        h2 {
+            min-width: 130px;
+        }
+
         .label-before {
             line-height: 20px;
             font-size: 14px;
@@ -88,6 +92,7 @@
 
         .company_logo {
             height: 257px;
+            min-width: 256px;
             background-color: rgba(196, 196, 196, 0.1);
             box-shadow: 0px 4px 4px rgba(87, 255, 245, 0.25);
             border-radius: 10px;
@@ -99,20 +104,16 @@
                 font-size: 18px;
                 color: $second-color;
                 background: rgba(0, 0, 0, 0.76);
-                border: 1px solid rgba(243, 127, 21, 0.33);
+                border: 1px solid $accent-color;
                 box-sizing: border-box;
                 border-radius: 10px;
-                padding: 10px 20px;
+                padding: 5% 10%;
             }
         }
     }
 
     .introduce {
         align-items: flex-start;
-
-        h2 {
-            min-width: 130px;
-        }
 
         textarea {
             margin-left: 81px;
@@ -234,224 +235,326 @@
 // =================RWD================== //
 
 @include laptop(1200px) {
+
+    //以下是radio button
     .companyback_info_form {
         input[type='radio']:after {
             width: 20px;
             height: 20px;
-            border-radius: 15px;
             top: -6px;
             left: 1px;
-            position: relative;
-            background-color: $black-color;
-            content: '';
-            display: inline-block;
-            visibility: visible;
-            outline: 3px solid $accent-color;
         }
 
         input[type='radio']:checked:after {
             width: 20px;
             height: 20px;
-            border-radius: 15px;
-            top: -2px;
-            left: -1px;
-            position: relative;
-            background-color: $accent-color;
-            content: '';
-            display: inline-block;
-            visibility: visible;
-            border: 3px solid;
-        }
-
-        input[type="radio"] {
-            margin-top: 20px;
-            width: 20px;
-            height: 20px;
-
-
+            top: -6px;
+            left: 1px;
         }
 
 
+        //這是input大小
         .field {
-            position: relative;
-            // @include flex-box-between(100%);
-            display: flex;
-            align-items: center;
-
-            .label-before {
-                line-height: 20px;
-                font-size: 14px;
-                top: 35%;
-                background: #040F15;
-                padding: 0 6px;
-                left: 32%;
-                // margin: 0 auto;
-            }
-
-            label::before {
-                content: attr(title);
-                position: absolute;
-                top: 52%;
-                left: 33%;
-                line-height: 36px;
-                font-size: 16px;
-                color: #F6FAFB;
-                transition: 300ms all;
-            }
-
             input {
-                @include input(480px, $accent-color);
-                border: 2px solid $second-color;
-                height: 56px;
-                line-height: 56px;
-                font-size: 18px;
-                box-shadow: 0px 4px 4px rgba(0, 209, 255, 0.25);
-                margin: 0 0 0 81px;
-                transition: 300ms all;
+                margin: 0 0 0 30px;
+                width: 80%;
+                min-width: 350px;
             }
-
-            // input:not(:focus) + label{
-            //     color: rgba(0,0,0,0);
-            // }
         }
 
         .all_input {
-            display: grid;
-            grid-template-columns: 2.9fr 1fr;
-            grid-gap: 5%;
+            grid-template-columns: 2.2fr 1fr;
+            grid-gap: 3%;
 
             .company_logo {
-                height: 257px;
-                background-color: rgba(196, 196, 196, 0.1);
-                box-shadow: 0px 4px 4px rgba(87, 255, 245, 0.25);
-                border-radius: 10px;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-
-                button {
-                    font-size: 18px;
-                    color: $second-color;
-                    background: rgba(0, 0, 0, 0.76);
-                    border: 1px solid rgba(243, 127, 21, 0.33);
-                    box-sizing: border-box;
-                    border-radius: 10px;
-                    padding: 10px 20px;
-                }
+                height: 84%;
             }
         }
 
         .introduce {
-            align-items: flex-start;
-
             h2 {
                 min-width: 130px;
             }
 
             textarea {
-                margin-left: 81px;
-                border-radius: 10px;
-                color: $second-color;
-                @include input_Date();
-                width: 80.5%;
-                border: 2px solid $second-color;
-                background-color: $black-color;
-                font-size: 18px;
-                padding: 10px 20px;
-                transition: .5s all;
+                margin-left: 30px;
+                width: 84%;
+                padding: 2%;
             }
 
             label::before {
                 top: 11%;
                 left: 24%;
-                background-color: #040F15;
-                padding: 0 20px;
-
-            }
-
-
-
-        }
-
-        //環境
-        .environment {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding-top: 80px;
-
-            span {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-
-                h5 {
-                    color: $main-color;
-                }
-            }
-
-            li:not(:first-child) {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
+                padding: 0 2%;
             }
         }
-
-
 
         //最後按鈕
         .save {
-            -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px $accent-color;
-            box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px $accent-color;
-            color: $accent-color;
-            border: 1px solid $accent-color;
-            margin: 100px auto 0;
+            margin: 12% auto 0;
+        }
 
-            >a {
-                @include font(14px, 700, left, 2);
-                color: $accent-color;
+
+        //環境
+        ul.environment {
+            flex-wrap: wrap-reverse;
+            justify-content: center;
+
+            li:first-child {
+                order: 1;
+                padding-bottom: 5%;
             }
 
-            &:hover {
-                background-color: $accent-color;
-                color: $black-color;
+            li:not(:first-child) {
+                flex-grow: 1;
+                min-width: 30%;
+            }
+        }
+    }
 
-                >a {
-                    @include font(14px, 1000, left, 2);
-                    color: $black-color;
+    .robot {
+        flex-wrap: wrap-reverse;
+        justify-content: center;
+
+        li:first-child {
+            order: 1;
+            padding-bottom: 5%;
+        }
+
+        li:not(:first-child) {
+            padding: 6% 10%;
+            margin: 0 6%;
+            // flex-grow: 1;
+        }
+
+
+    }
+
+}
+
+
+//這裡是重打的
+@include pad(960px) {
+
+    .companyback_info_form {
+        .all_input {
+            grid-template-columns: 2fr 1.5fr;
+            grid-gap: 0;
+
+            .field {
+                flex-direction: column;
+                align-items: flex-start;
+
+                input {
+                    margin: 0;
+                }
+
+                .label-before {
+                    line-height: 20px;
+
+                    top: 40%;
+
+                    padding: 0 2%;
+                    left: 5%;
+
+                }
+
+                label::before {
+
+                    top: 57%;
+                    left: 6%;
+                }
+
+            }
+
+
+
+            .pt-45 {
+                padding-top: 0;
+            }
+
+        }
+
+        //廠商介紹
+        .introduce {
+            flex-wrap: wrap;
+
+            label::before {
+                top: 19%;
+                left: 77%;
+                font-size: 18px;
+            }
+
+            textarea {
+                margin-left: 0;
+                width: 100%;
+            }
+
+        }
+
+        .pt-60 {
+            padding-top: 8%;
+        }
+
+        ul.environment {
+            display: block;
+
+            li:not(:first-child) {
+                padding-bottom: 5%;
+            }
+        }
+
+        .save {
+            margin: 2% auto 0;
+        }
+    }
+
+    .robot {
+        padding-top: 8%;
+    }
+}
+
+//
+@include pad(768px) {
+    .company_title {
+        display: block;
+        width: 35%;
+        margin: 0 auto;
+
+        a {
+            border-radius: 30px;
+        }
+    }
+
+    .companyback_info_form {
+
+        //field introduct
+        .field {
+            align-items: center;
+        }
+
+        .introduce {
+            flex-direction: column;
+
+            label::before {
+                top: calc(100% - 82%);
+                left: 15%;
+            }
+
+            textarea {
+                width: 80%;
+                margin: 5% 0 auto;
+            }
+        }
+
+        .pt-60 {
+            padding-top: 5%;
+        }
+
+        .all_input {
+            grid-template-columns: 1fr;
+
+            //pt-45
+            .pt-45 {
+                padding-top: 5%;
+            }
+
+            li:nth-child(1) {
+                order: 2;
+                width: 60%;
+                margin: 0 auto;
+
+                .field {
+                    align-items: center;
+
+                    label::before {
+                        top: 66%;
+                        left: 12%;
+                    }
+
+                    .label-before {
+                        top: 54%;
+                        left: 10%;
+                    }
+
+                    input {
+                        margin-top: 5%;
+                    }
+                }
+            }
+
+            li:nth-child(2) {
+                width: 50%;
+                min-width: 260px;
+                order: 1;
+                margin: 0 auto;
+            }
+
+            .mt-45 {
+                margin-top: 2%;
+            }
+
+            .company_logo {
+                padding: 5%;
+                min-height: 260px;
+            }
+        }
+
+        .environment {
+            padding-top: 10%;
+        }
+    }
+
+    .robot {
+        display: block;
+
+        li:first-child {
+            padding-bottom: 0;
+        }
+
+        li:not(:first-child) {
+            width: 70%;
+            margin: 0 auto;
+            margin-top: 8%;
+        }
+    }
+
+
+}
+
+@include mobile(375px) {
+    .companyback_info_form {
+        .all_input {
+            li:nth-child(1) {
+                width: 100%;
+
+                .field {
+                    label::before {
+                        left: 17%;
+
+                    }
+
+                    .label-before {
+                        top: 51%;
+                        left: 16%;
+                    }
                 }
             }
         }
 
-    }
+        .field {
+            input {
+                min-width: 0;
+            }
 
-    .robot {
+            ;
+        }
 
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding-top: 80px;
-
-        span {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-
-            h5 {
-                color: $main-color;
+        .introduce {
+            label::before {
+                top: 15%;
+                left: 17%;
             }
         }
-
-        li:not(:first-child) {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding: 45px 80px;
-            background: rgba(31, 31, 31, 0.69);
-            box-shadow: 0px 4px 4px rgba(243, 127, 21, 0.33);
-            border-radius: 10px;
-        }
-
     }
-
 }
