fix: 修改廠商後台的menu icon，調整新聞資訊在320px會跑板問題

--- a/src/layout/nav.html
+++ b/src/layout/nav.html
@@ -28,9 +28,9 @@
       <li class="nav-company"><a href="./index.html" class="accent-color">登出<img src="img/logout.svg" alt="logout" class="ml-6"></img></a></li>
     </ul>
     <ul class="company-menu" id="company_menu">
-      <li id="companyBack_info"><a href="companyback_info.html"><img src="img/c_back/company_menu_1.png" alt="廠商資料設定區"></a></li>
-      <li id="companyBack_live"><a href="companyback_live.html"><img src="img/c_back/company_menu_2.png" alt="技術展示區"></a></li>
-      <li id="companyBack"><a href="companyback.html"><img src="img/c_back/company_menu_3.png" alt="直播申請區"></a></li>
+      <li id="companyBack_info"><a href="companyback_info.html"><img src="img/c_back/company_menu_1.svg" alt="廠商資料設定區"></a></li>
+      <li id="companyBack_live"><a href="companyback_live.html"><img src="img/c_back/company_menu_2.svg" alt="技術展示區"></a></li>
+      <li id="companyBack"><a href="companyback.html"><img src="img/c_back/company_menu_3.svg" alt="直播申請區"></a></li>
     </ul>
     <div id="menu-backdrop"></div>
   </div>
