--- a/src/sass/page/_about.scss
+++ b/src/sass/page/_about.scss
@@ -163,6 +163,7 @@
     background-color: #333333;
     // border:2px solid #57FFF5 ;
     display: block;
+    border: 1px solid $black-color;
 }
 
 .about_speaker:hover {
