--- a/src/sass/page/_news.scss
+++ b/src/sass/page/_news.scss
@@ -49,6 +49,8 @@
         width: 400px;
         display: flex;
         flex-direction: column;
+        border: 3px solid $black-color;
+        padding: 5px;
         @include pad(500px) {
           width: 250px;
         }
