feat: 新增menu到該頁面時增加圖示，並增加動畫效果

--- a/src/layout/nav.html
+++ b/src/layout/nav.html
@@ -19,13 +19,28 @@
       </ul>
     </div>
     <ul class="menu">
-      <li class="nav-company"><a href="companyback.html" class="accent-color">管理後台</a></li>
-      <li><a href="extend.html">虛擬商展</a></li>
-      <li><a href="live.html">現正直播</a></li>
-      <li><a href="about.html">展會介紹</a></li>
-      <li><a href="news.html">新聞資訊</a></li>
-      <li><a href="contect.html">聯絡我們</a></li>
-      <li class="nav-company"><a href="./index.html" class="accent-color">登出<img src="img/logout.svg" alt="logout" class="ml-6"></img></a></li>
+      <li class="nav-company"><a href="companyback.html" class="accent-color">管理後台</a>
+        <img class="now_page menu_img_back -hide" src="img/live/live_circle_2.svg" alt="圓形圖案">
+      </li>
+      <li><a href="extend.html" >虛擬商展</a>
+        <img class="now_page menu_img_extend -hide" src="img/live/live_circle_2.svg" alt="圓形圖案">
+      </li>
+      <li><a href="live.html">現正直播</a>
+        <img class="now_page menu_img_live -hide" src="img/live/live_circle_2.svg" alt="圓形圖案">
+      </li>
+      <li><a href="about.html">展會介紹</a>
+        <img class="now_page menu_img_about -hide" src="img/live/live_circle_2.svg" alt="圓形圖案">
+      </li>
+      <li><a href="news.html">新聞資訊</a>
+        <img class="now_page menu_img_news -hide" src="img/live/live_circle_2.svg" alt="圓形圖案">
+      </li>
+      <li><a href="contect.html">聯絡我們</a>
+        <img class="now_page menu_img_contect -hide" src="img/live/live_circle_2.svg" alt="圓形圖案">
+      </li>
+      <li class="nav-company"><a href="./index.html" class="accent-color">登出
+        <img src="img/logout.svg" alt="logout" class="ml-6 logout"></img></a>
+      </li>
+      
     </ul>
     <ul class="company-menu" id="company_menu">
       <li id="companyBack_info"><a href="companyback_info.html"><img src="img/c_back/company_menu_1.svg" alt="廠商資料設定區"></a></li>
