--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -15,7 +15,7 @@
 // 各頁面的css請在這邊引入，不用再寫到html了
 @import 'page/index';
 @import 'page/c_back';
-@import 'page/c_back_live';
+@import 'page/c_back_tech';
 @import 'page/about';
 @import 'page/live';
 @import 'page/extend';
@@ -23,6 +23,3 @@
 @import 'page/c_back_info';
 @import 'page/_news';
 @import 'page/backstage';
-
-
-
